@@ -1,6 +1,7 @@
 2005-02-28  Herbert Xu <herbert@gondor.apana.org.au>
 
 	* Replaced EXEVAL with SKIPEVAL.
+	* Update funcnest atomically.
 
 2005-02-28  A Costa <agcosta@gis.net>
 
